HFP-3844 Fix z-index as low as possible

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -201,7 +201,7 @@
     left: 0;
     padding: 0;
     border: 1px solid #888;
-    z-index: 50;
+    z-index: 1;
     overflow: hidden;
     width: 100%;
     height: 100%;
